[project]
name = "library-api"
version = "0.1.0"
description = ""
authors = [{ name = "adheeb2", email = "adheebanvar2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["alembic (>=1.14.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
